--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "cors": "^2.8.6",
     "jsonwebtoken": "^9.0.3",
+    "pg": "^8.18.0",
     "typescript": "^5.9.3",
     "zod": "^4.3.6"
   },
