--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.6",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
+    "qrcode": "^1.5.4",
     "typescript": "^5.9.3",
+    "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.1.0",
     "@types/pg": "^8.16.0",
+    "@types/qrcode": "^1.5.6",
     "prisma": "^7.3.0"
   }
 }
