--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "qrcode": "^1.5.4",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
