--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^7.3.7",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-qr-barcode-scanner": "^2.1.22",
     "react-router-dom": "^7.13.0",
+    "socket.io-client": "^4.8.3",
     "styled-components": "^6.3.8",
     "tailwindcss": "^4.1.18"
   },
